--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,8 @@
 <% provide(:title, "Help") %>
 <!DOCTYPE html>
-<<h1>Help</h1>
+<h1>Help</h1>
 <p>
   This is the help page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
-<
